toate instruementele cu items-start

--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -32,24 +32,24 @@
             <p class="mb-2">This questionnaire aims to identify and reconnect with young people who have left the alternative care system during the previous year.</p>
             <p class="mb-2">Please complete this questionnaire separately for each young person (18+) who in the last 12 months left the alternative child care system, regardless of the type of service they receive (residential or family-based). This questionnaire will be completed for young persons who were in the following types of services of the alternative child care system: Mehribonlik houses, Muruvvat houses for children with disabilities, family-type children's homes, SOS children's villages/families. For specialized boarding schools, this questionnaire should be filled in for each young person (16+) who completed their studies in boarding schools during the previous year.</p>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. INFORMATION ABOUT THE INSTITUTION AND THE PERSON WHO COMPLETED THE TRACING QUESTIONNAIRE</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. INFORMATION ABOUT THE INSTITUTION AND THE PERSON WHO COMPLETED THE TRACING QUESTIONNAIRE</h2>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-12">
+            <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Service code from the registry</div>
                 <div>
                     <input type="text" id="str1" name="str1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR2. Service name</div>
                 <div>
                     <input type="text" id="str2" name="str2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR3. Service location</div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Region</div>
                 <div>
                     <select id="str3a" name="str3a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -57,7 +57,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. District</div>
                 <div>
                     <select id="str3b" name="str3b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -65,7 +65,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Settlement</div>
                 <div>
                     <select id="str3c" name="str3c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -76,7 +76,7 @@
 
             <input type="hidden" id="str3e" name="str3e" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR4. Type of institution</div>
                 <div>
                     <select id="str4" name="str4" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -103,56 +103,56 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Name</div>
                 <div>
                     <input type="text" id="omr1" name="omr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR2. Patronymics</div>
                 <div>
                     <input type="text" id="omr2" name="omr2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR3. Surname</div>
                 <div>
                     <input type="text" id="omr3" name="omr3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR4. Position/role</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR5. Profession</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR6. Phone</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR7. E-mail</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. PERSONAL INFORMATION ABOUT THE YOUNG PERSON</h2>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR1. Birth certificate/Passport/Identification document</div>
                 <div>
                     <input type="text" id="ptr1" name="ptr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -161,25 +161,25 @@
 
             <p class="italic text-red-500">Fill in the person's birth certification/ID/Passport Number. If the person does not have one, fill in 0 (zero).</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2a. Name</div>
                 <div>
                     <input type="text" id="ptr2a" name="ptr2a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2b. Patronymics</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2c. Surname</div>
                 <div>
                     <input type="text" id="ptr2c" name="ptr2c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR3. Gender</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
@@ -192,13 +192,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR4. Date of birth (dd/mm/yyyy)</div>
                 <div>
                     <input type="text" id="ptr4" name="ptr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <p>PTR4a. Person's age (at the date of the monitoring round)</p>
                 </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5a. Place of birth</div>
                 <div class="flex items-center">
                     <input id="ptr5a_dk" name="ptr5a_dk" type="checkbox" value="9" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR7. Where did the person go when s/he left the alternative care?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR8. According to best of your knowledge, where does the person currently reside?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -335,21 +335,21 @@
             </div>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Name of the institution</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8a" name="ptr8a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. Address:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8b" name="ptr8b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Phone number:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8c" name="ptr8c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -393,14 +393,14 @@
 
             <input type="hidden" id="ptr8h" name="ptr8h" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR9. Please provide any alternative contact details such as social media profile, parents, siblings, relatives or friends that can be used to reach out to the person</div>
                 <div class="flex items-center">
                     <textarea id="ptr9" name="ptr9" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR10. Please write any observations that might help us identify and contact the person.</div>
                 <div class="flex items-center">
                     <textarea id="ptr10" name="ptr10" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
@@ -409,7 +409,7 @@
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>INSON Center that should track down the person.</strong></p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>OBS. Observations</div>
                 <div class="flex gap-4">
                     <textarea id="obs" name="obs" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
