--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -32,24 +32,24 @@
             <p class="mb-2">Цель этого опросника - выявить молодых людей, покинувших систему альтернативного опеки в течение предыдущего года, и восстановить с ними связь.</p>
             <p class="mb-2">Пожалуйста, заполните эту анкету отдельно для каждого молодого человека (старше 18 лет), который за последние 12 месяцев покинул систему альтернативной опеки , независимо от типа услуг, которые он получает (в учреждении или в семье). Эта анкета будет заполнена для молодых людей, которые находились в следующих учреждениях системы альтернативной опеки : дома Мехрибонлик, дома Мурувват для детей с инвалидностью, детские дома семейного типа, SOS Детские деревни/семьи SOS. Для специализированных школ-интернатов эта анкета должна быть заполнена для каждого молодого человека (старше 16 лет), который завершил свое обучение в школах-интернатах в течение предыдущего года.</p>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ И ЛИЦЕ, ЗАПОЛНИВШЕМ АНКЕТУ ПО ОТСЛЕЖИВАНИЮ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. ИНФОРМАЦИЯ ОБ УЧРЕЖДЕНИИ И ЛИЦЕ, ЗАПОЛНИВШЕМ АНКЕТУ ПО ОТСЛЕЖИВАНИЮ</h2>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-12">
+            <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Код услуги из реестра</div>
                 <div>
                     <input type="text" id="str1" name="str1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR2. Название услуги</div>
                 <div>
                     <input type="text" id="str2" name="str2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR3. Местоположение службы</div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Область</div>
                 <div>
                     <select id="str3a" name="str3a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -57,7 +57,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. Район</div>
                 <div>
                     <select id="str3b" name="str3b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -65,7 +65,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Населённый пункт</div>
                 <div>
                     <select id="str3c" name="str3c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -76,7 +76,7 @@
 
             <input type="hidden" id="str3e" name="str3e" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR4. Тип учреждения</div>
                 <div>
                     <select id="str4" name="str4" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -103,56 +103,56 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Имя</div>
                 <div>
                     <input type="text" id="omr1" name="omr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR2. Отчество</div>
                 <div>
                     <input type="text" id="omr2" name="omr2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR3. Фамилия</div>
                 <div>
                     <input type="text" id="omr3" name="omr3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR4. Должность/функции</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR5. Профессия</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR6. Телефон</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR7. Электронная почта</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ О МОЛОДОМ ЧЕЛОВЕКЕ</h2>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR1. Свидетельство о рождении/Паспорт/Документ, удостоверяющий личность</div>
                 <div>
                     <input type="text" id="ptr1" name="ptr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -161,25 +161,25 @@
 
             <p class="italic text-red-500">Введите номер свидетельства о рождении/удостоверения личности/номер паспорта человека. Если у человека его нет, введите 0 (ноль).</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2a. Имя</div>
                 <div>
                     <input type="text" id="ptr2a" name="ptr2a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2b. Отчество</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2c. Фамилия</div>
                 <div>
                     <input type="text" id="ptr2c" name="ptr2c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR3. Пол</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
@@ -192,13 +192,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR4. Дата рождения (дд/мм/гггг)</div>
                 <div>
                     <input type="text" id="ptr4" name="ptr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <p>PTR4a. Возраст молодого человека (на дату проведения мониторинга)</p>
                 </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5a. Место рождения</div>
                 <div class="flex items-center">
                     <input id="ptr5a_dk" name="ptr5a_dk" type="checkbox" value="9" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR7. Куда направился этот молодой человек, когда он/она покинул(а) систему альтернативной опеки?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR8. Если вам известно, укажите, где в настоящее время проживает этот молодой человек?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -335,21 +335,21 @@
             </div>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Название заведения</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8a" name="ptr8a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. Адрес:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8b" name="ptr8b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Номер телефона:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8c" name="ptr8c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -393,14 +393,14 @@
 
             <input type="hidden" id="ptr8h" name="ptr8h" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR9. Пожалуйста, укажите любые альтернативные контактные данные, такие как профиль в социальных сетях, родители, братья и сестры, родственники или друзья, которые могут быть использованы для связи с этим молодым человеком</div>
                 <div class="flex items-center">
                     <textarea id="ptr9" name="ptr9" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR10. Пожалуйста, напишите любую информацию которая могла бы помочь нам идентифицировать этого молодого человека и связаться с ним.</div>
                 <div class="flex items-center">
                     <textarea id="ptr10" name="ptr10" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
@@ -409,7 +409,7 @@
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>Центр ИНСОН, который должен проводить мониторинг этого человека.</strong></p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>OBS. Наблюдения</div>
                 <div class="flex gap-4">
                     <textarea id="obs" name="obs" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
