--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -32,24 +32,24 @@
             <p class="mb-2">Ushbu so'rovnomaning maqsadi - o'tgan yil davomida muqobil vasiylik tizimini tark etgan yosh shaxslarni aniqlash va ular bilan qayta bog'lanishdir.</p>
             <p class="mb-2">Iltimos, ushbu so'rovnomani oxirgi 12 oy ichida xizmat turidan qat'i nazar (muassasada yoki oilada), bolalarga vasiylik qilishning muqobil tizimini tark etgan har bir yosh shaxs (18 yoshdan katta) uchun alohida to'ldiring. Ushbu so'rovnoma bolalarga vasiylik qilishning muqobil tizimiga kiruvchi  quyidagi muassasalarni tark etgan yoshlar uchun to'ldiriladi: Mehribonlik uylari, nogironligi mavjud bolalar uchun Muruvvat uylari, oilaviy bolalar uylari, SOS bolalar qishloqlari/oilalari. Ixtisoslashgan maktab-internatlar uchun ushbu so'rovnoma o'tgan yil davomida maktab-internatlarda o'qishni tugatgan har bir yosh shaxs (16 yoshdan katta) uchun to'ldirilishi kerak.</p>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. KUZATUV SO'ROVNOMASINI TO'LDIRGAN SHAXS VA MUASSASA TO'G'RISIDAGI MA'LUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">1. KUZATUV SO'ROVNOMASINI TO'LDIRGAN SHAXS VA MUASSASA TO'G'RISIDAGI MA'LUMOTLAR</h2>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-12">
+            <div class="grid grid-cols-2 gap-4 items-start mt-12">
                 <div>STR1. Ro'yxatdan o'tish kitobidan xizmat kodi</div>
                 <div>
                     <input type="text" id="str1" name="str1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR2. Xizmat nomi</div>
                 <div>
                     <input type="text" id="str2" name="str2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR3. Xizmatning lokatsiyasi</div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Viloyat</div>
                 <div>
                     <select id="str3a" name="str3a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -57,7 +57,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. Tuman</div>
                 <div>
                     <select id="str3b" name="str3b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -65,7 +65,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Aholi punkti</div>
                 <div>
                     <select id="str3c" name="str3c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -76,7 +76,7 @@
 
             <input type="hidden" id="str3e" name="str3e" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>STR4. Muassasa turi</div>
                 <div>
                     <select id="str4" name="str4" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -103,56 +103,56 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Ismi</div>
                 <div>
                     <input type="text" id="omr1" name="omr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR2. Otasining ismi</div>
                 <div>
                     <input type="text" id="omr2" name="omr2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR3. Familiyasi</div>
                 <div>
                     <input type="text" id="omr3" name="omr3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR4. Lavozim/vazifa</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR5. Kasbi</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR6. Telefon</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR7. Elektron pochta</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR1. Tugʻilganlik toʻgʻrisidagi guvohnoma / pasport / shaxsni tasdiqlovchi hujjat</div>
                 <div>
                     <input type="text" id="ptr1" name="ptr1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -161,25 +161,25 @@
 
             <p class="italic text-red-500">Shaxsning tugʻilganlik toʻgʻrisidagi guvohnoma/shaxsini tasdiqlovchi hujjat/pasport raqamini kiriting. Agar odamda yoʻq boʻlsa, 0 (nol) ni kiriting.</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2a. Ismi</div>
                 <div>
                     <input type="text" id="ptr2a" name="ptr2a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2b. Otasining ismi</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR2c. Familiyasi</div>
                 <div>
                     <input type="text" id="ptr2c" name="ptr2c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR3. Jinsi</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
@@ -192,13 +192,13 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR4. Tugʻilgan sana (kun/oy/yil)</div>
                 <div>
                     <input type="text" id="ptr4" name="ptr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>
                     <p>PTR4a. Shaxsning yoshi (monitoring oʻtkazilgan sanada)</p>
                 </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR5a. Tugʻilgan joyi</div>
                 <div class="flex items-center">
                     <input id="ptr5a_dk" name="ptr5a_dk" type="checkbox" value="9" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR7. Muqobil vasiylik tizimini tark etganida, ushbu yosh shaxs qayerga ketdi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">PTR8. Agar sizga ma'lum bo'sa, keltiring, ushbu yosh shaxs hozirda qayerda yashaydi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -335,21 +335,21 @@
             </div>
 
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>a. Muassasasining nomi</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8a" name="ptr8a" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>b. Manzil:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8b" name="ptr8b" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>c. Telefon raqami:</div>
                 <div class="flex items-center">
                     <input type="text" id="ptr8c" name="ptr8c" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -393,14 +393,14 @@
 
             <input type="hidden" id="ptr8h" name="ptr8h" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR9. Iltimos, ushbu yosh shaxs bilan bog'lanish uchun foydalanish mumkin bo'lgan ijtimoiy media profili, ota-onalar, aka-ukalar, qarindoshlar yoki do'stlar kabi muqobil aloqa ma'lumotlarini kiriting</div>
                 <div class="flex items-center">
                     <textarea id="ptr9" name="ptr9" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PTR10. Iltimos, ushbu yosh shaxsni aniqlash va ular bilan bog'lanishimizga yordam beradigan har qanday ma'lumotlarni yozing.</div>
                 <div class="flex items-center">
                     <textarea id="ptr10" name="ptr10" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
@@ -409,7 +409,7 @@
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>Ushbu yosh shaxsga oid monitoring ishlarini o'tkazishi kerak bo'lgan INSON markazi.</strong></p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>OBS. Kuzatuvlarni</div>
                 <div class="flex gap-4">
                     <textarea id="obs" name="obs" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full"></textarea>
