--- a/src/pages/instruments/06_dsee_en.html
+++ b/src/pages/instruments/06_dsee_en.html
@@ -40,31 +40,31 @@
 
             <input type="hidden" id="q1" name="q1" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>Q2. Name, patronymics, and surname of the person who filled in the questionnaire</div>
                 <div>
                     <input type="text" id="q2" name="q2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>Q3. Job title</div>
                 <div>
                     <input type="text" id="q3" name="q3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>Q4. Profession</div>
                 <div>
                     <input type="text" id="q4" name="q4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>Q5. Phone</div>
                 <div>
                     <input type="text" id="q5" name="q5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>Q6. E-mail</div>
                 <div>
                     <input type="text" id="q6" name="q6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -73,19 +73,19 @@
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">1 GENERAL INFORMATION ABOUT THE INSTITUTION</h2>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>I1. Name of the institution</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>I2. Institution code from the registry</div>
                 <div>
                     <input type="text" id="i2" name="i2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>I3. Address of the institution</div>
                 <div>
                     <input type="text" id="i3" name="i3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
@@ -120,7 +120,7 @@
 
             <input type="hidden" id="i4d" name="i4d" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-4">
+            <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>I9. Type of institution</div>
                 <div>
                     <select id="i9" name="i9" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
