--- a/src/pages/instruments/09_eef_ru.html
+++ b/src/pages/instruments/09_eef_ru.html
@@ -37,20 +37,20 @@
             <p class="mb-2">Ответственный за выполнение: оценщик</p>
             <p class="mb-2">Примерное среднее время заполнения: продолжительность посещения - один день, около 60 минут на заполнения формы</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Q1. Дата визита</div>
                 <div>
                     <input type="text" id="q1" name="q1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Q2: Имя, отчество и фамилия лица, заполнившего анкету</div>
                 <div>
                     <input type="text" id="q2" name="q2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Название учреждения</div>
                 <div>
                     <select id="i2" name="i2" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -58,21 +58,21 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I2. Код учреждения из реестра</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I3. Адрес учреждения</div>
                 <div>
                     <input type="text" id="i3" name="i3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4a. Область</div>
                 <div>
                     <select id="i4a" name="i4a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4b. Район</div>
                 <div>
                     <select id="i4b" name="i4b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4c. Населённый пункт</div>
                 <div>
                     <select id="i4c" name="i4c"
@@ -102,7 +102,7 @@
 
             <input type="hidden" id="i4d" name="i4d" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I9. Тип учреждения</div>
                 <div>
                     <select id="i9" name="i9" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
