--- a/src/pages/instruments/09_eef_uz.html
+++ b/src/pages/instruments/09_eef_uz.html
@@ -37,20 +37,20 @@
             <p class="mb-2">To'ldirish uchun mas'ul: baholovchi</p>
             <p class="mb-2">To'ldirishning taxminiy o'rtacha vaqti: tashrif davomiyligi - bir kun, shaklni to'ldirish taxminan 60 daqiqa</p>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Q1. Tashrif sanasi</div>
                 <div>
                     <input type="text" id="q1" name="q1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>Q2: So'rovnomani to'ldirgan shaxsning ismi, otasining ismi va familiyasi</div>
                 <div>
                     <input type="text" id="q2" name="q2" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I1. Tashkilot nomi</div>
                 <div>
                     <select id="i2" name="i2" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -58,21 +58,21 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I2. Reyestrdagi muassasa kodi</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I3. Tashkilot manzili</div>
                 <div>
                     <input type="text" id="i3" name="i3" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4a. Viloyat</div>
                 <div>
                     <select id="i4a" name="i4a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4b. Tuman</div>
                 <div>
                     <select id="i4b" name="i4b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I4c. Aholi punkti</div>
                 <div>
                     <select id="i4c" name="i4c"
@@ -102,7 +102,7 @@
 
             <input type="hidden" id="i4d" name="i4d" />
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>I9. Tashkilot turi</div>
                 <div>
                     <select id="i9" name="i9" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
